--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -294,7 +294,7 @@ Viene mostrato all'acquirente il riepilogo della transazione con il prezzo in do
 UC8.1 Visualizzazione messaggio procedura di pagamento annullata:
 \begin{enumerate}
     \item cancellazione sessione di pagamento.
-    \item l'acquirente viene indirizzato presso l'home page di \textit{google.com}.
+    \item l'acquirente viene reindirizzato al sito web dell'e-commerce.
 \end{enumerate}
 \textbf{Requisiti collegati all'estensione UC8.1}: RFO15, RFO16.
 
@@ -538,7 +538,7 @@ RFO14 & L'acquirente con wallet connesso poter confermare il pagamento nella lan
 \hline
 RFO16 & Il sistema deve cancellare la sessione di pagamento se l'acquirente con wallet connesso annulla il pagamento sulla landing page. & Obbligatorio & UC8.1 \\
 \hline
-RFO15 & Il sistema deve reindirizzare l'acquirente sulla home page di \textit{google.com} se l'acquirente con wallet connesso annulla il pagamento sulla landing page. & Obbligatorio & UC8.1 \\
+RFO15 & Il sistema deve reindirizzare l'acquirente sul sito web dell'e-commerce se l'acquirente con wallet connesso annulla il pagamento sulla landing page. & Obbligatorio & UC8.1 \\
 \hline
 RFO17 & L'acquirente con wallet connesso deve essere indirizzato automaticamente su Metamask per completare il pagamento, quando conferma il pagamento sulla landing page. & Obbligatorio & UC9 \\
 \hline
