--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -217,6 +217,12 @@ L'input fornito alle funzioni è validato prima di essere processato, annullando
 Alcune funzioni richiedono il passaggio in input di un ID.
 Deve essere controllato che tale ID esista prima di continuare le operazioni.
 
+\subsubsection{Testing}
+Per testare il contratto si utilizza la suite Truffle (usata anche per compilazione e deployment).
+Al fine di includere nei test di unità la copertura del codice, viene utilizzato il plugin solidity-coverage alla versione 0.6.3 (documentazione al link \href{https://github.com/sc-forks/solidity-coverage/tree/0.6.x-final#solidity-coverage}{https://github.com/sc-forks/solidity-coverage/tree/0.6.x-final#solidity-coverage}).\\
+Il plugin clona la blockchain di test Mumbai di Polygon e la esegue in locale, per poi effettuarvici il deployment del contratto ed eseguire i test.\\
+Di comune accordo col Proponente i test che richiedono il mocking completo di altri contratti non sono stati eseguiti visto l'alto costo di implementazione e la bassa utilità.
+
 \newpage
 \subsection{Web app}
 \subsubsection{Diagramma delle classi}
