Messo escape di # - risolto warning

--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -219,7 +219,7 @@ Deve essere controllato che tale ID esista prima di continuare le operazioni.
 
 \subsubsection{Testing}
 Per testare il contratto si utilizza la suite Truffle (usata anche per compilazione e deployment).
-Al fine di includere nei test di unità la copertura del codice, viene utilizzato il plugin solidity-coverage alla versione 0.6.3 (documentazione al link \href{https://github.com/sc-forks/solidity-coverage/tree/0.6.x-final#solidity-coverage}{https://github.com/sc-forks/solidity-coverage/tree/0.6.x-final#solidity-coverage}).\\
+Al fine di includere nei test di unità la copertura del codice, viene utilizzato il plugin solidity-coverage alla versione 0.6.3 (documentazione al link \href{https://github.com/sc-forks/solidity-coverage/tree/0.6.x-final#solidity-coverage}{https://github.com/sc-forks/solidity-coverage/tree/0.6.x-final\#solidity-coverage}).\\
 Il plugin clona la blockchain di test Mumbai di Polygon e la esegue in locale, per poi effettuarvici il deployment del contratto ed eseguire i test.\\
 Di comune accordo col Proponente i test che richiedono il mocking completo di altri contratti non sono stati eseguiti visto l'alto costo di implementazione e la bassa utilità.
 
