--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -261,6 +261,41 @@ Nessuno dei seguenti metodi prevede alcuna verifica sull'identità dell'utente o
 Non è stato adottato alcun design pattern.
 \paragraph{Motivazioni}
 Adottare pattern architetturali avrebbe richiesto un costo ben superiore ai benefici. Questo perché la web app è molto semplice ed una mera interfaccia asincrona per la comunicazione col contratto in blockchain.
+\subsubsection{Testing}
+Per eseguire i test sulla web app si è scelto di utilizzare JSCover in modalità proxy.
+In altre parole, i file js dell'applicazione passeranno attraverso un server proxy che li trasformerà e terrà traccia della loro copertura. \\
+Per eseguire i test sarà necessario:
+\begin{enumerate}
+    \item avviare il server della web app;
+    \item avviare il server di JSCover;
+    \item configurare il proxy;
+    \item eseguire e salvare i test.
+\end{enumerate}
+\paragraph{Avvio del server ShopChain}
+Per avviare il server proxy eseguire il seguente comando: \\\texttt{java -jar JSCover-all.jar -ws --proxy --port=3128 --report-dir=jscoverage --local-storage}\\
+È possibile cambiare porta nel caso la \texttt{3128} sia già occupata.
+\paragraph{Configurazione del proxy}
+Il server da raggiungere è un server locale ma spesso le impostazioni del browser o del sistema operativo impediscono l'uso del proxy quando ci si collega a \texttt{localhost} o a \texttt{127.0.0.1}. \\
+Per questo motivo è necessario aggiungere un nuovo host chiamato \texttt{localhost-proxy} alla lista degli host noti (\texttt{/etc/hosts} nei sistemi Unix) e impostare come proxy \texttt{localhost-proxy:3128}.
+\paragraph{Esecuzione dei test}
+Per eseguire i test sarà necessario connettersi a \texttt{http://localhost-proxy:8080}.
+\subparagraph{Salvataggio dei dati}
+JSCover terrà traccia di ogni linea di codice eseguita e salverà i dati nel localStorage di HTML5. \\
+Per salvare i dati nella cartella \texttt{jscoverage} sarà necessario:
+\begin{enumerate}
+    \item caricare la pagina \texttt{http://localhost-proxy:8080/jscoverage.html};
+    \item aprire la tab ``Store";
+    \item cliccare su ``Store Report".
+\end{enumerate}
+\subparagraph{Cancellazione dei dati}
+I dati dei test sono cumulativi, perciò quando bisogna effettuare i test da zero è necessario cancellare i dati salvati. \\
+Per cancellare i dati è necessario caricare la pagina \texttt{http://localhost-proxy:8080/jscoverage-clear-local-storage.html}.
+\subparagraph{Vedere i report}
+Per visualizzare il report è sufficiente:
+\begin{enumerate}
+    \item caricare la pagina \texttt{http://localhost-proxy:8080/jscoverage.html};
+    \item aprire la tab ``Summary".
+\end{enumerate}
 
 \subsection{Script di messa in vendita}
 \subsubsection{sell\_item}
