Aggiunto task pagina help

--- a/docs/interni/verbali/2022_04_06_I/2022_04_06_I.tex
+++ b/docs/interni/verbali/2022_04_06_I/2022_04_06_I.tex
@@ -55,6 +55,7 @@ Sono state determinate le seguenti tasks per il ciclo di sprint 3:
 	\item sistemare css della webapp
 	\item finire manuale installazione
 	\item inserire test del server in specifiche architetturali
+	\item aggiungere pagina help coi link ai manuali nella webapp
 \end{enumerate}
 
 \section{Impegni presi}
@@ -65,6 +66,7 @@ L'assegnazione delle tasks ai membri per il ciclo di sprint 3 è avvenuta come s
 	\item Alberto Nicoletti, Raffaele Oliviero e Andrea Volpe: task 3;
 	\item Federico Marchi : task 4;
 	\item Elia Scandaletti : task 5;
+	\item Giovanni Cocco : task 6;
 \end{itemize}
 
 \end{document}
