--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -25,6 +25,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{0.0.4}{21/02/2021}{Giovanni Cocco}{Redazione}{Aggiunta dashboard al docuemento.}
 \addversione{2.0.0}{23/03/2021}{Elia Scandaletti}{Redazione}{Rifacimento del documento.}
 \addversione{2.1.0}{30/03/2021}{Giovanni Cocco}{Redazione}{Aggiornamento per ciclo 1.}
+\addversione{2.2.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento per ciclo 2.}
 
 \begin{document}
 
@@ -166,7 +167,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2021-12-09, 43.59)
 					(2021-12-22, 46.31)
 					(2022-02-16, 63.87)
-					(2022-03-01, 47.52)	
+					(2022-03-01, 47.52)
 				};\addlegendentry{Verbali esterni}
 			\addplot coordinates {
 					(2022-03-23, 55.2)
