--- a/docs/interni/verbali/2022_04_06_I/2022_04_06_I.tex
+++ b/docs/interni/verbali/2022_04_06_I/2022_04_06_I.tex
@@ -42,8 +42,9 @@ Verbale dell'incontro del 06/04/2022.
 \section{Svolgimento}
 
 \subsection{Criticità ciclo di sprint 2}
-Durante il consuntivo del ciclo di sprint 2 è emerso che un bug relativo al funzionamento di Metamask, ha rallentato il lavoro per lo spring a tutti i membri del team.
-Il problema si è capito essere collegato alla rpc che collega metamask con la rete mumbai. Cambiando la rpc abbiamo risolto il problema.
+Durante il consultivo del ciclo di sprint 2 è emerso un problema con Metamask riconducibile all'RPC utilizzato, 
+che bloccava la possibilità di eseguire transazioni. 
+Cambiando RPC il problema è stato risolto. Questo problema ha causato un rallentamento del lavoro per tutti i membri del team.
 
 
 \subsection{Tasks per il ciclo di sprint 3}
