--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -117,11 +117,13 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-02-09, 52.46)
 					(2022-02-26, 72.56)
 					(2022-03-23, 72.44)
+					(2022-04-07, 66.92)
 				};\addlegendentry{Verbali interni}
 
 			\addplot coordinates {
 					(2022-03-02, 55.2)
 					(2022-03-27, 55.15)
+					(2022-04-07, 55.19)
 				};\addlegendentry{Norme di progetto}
 
 		\end{axis}
@@ -172,17 +174,19 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 			\addplot coordinates {
 					(2022-03-23, 55.2)
 					(2022-03-27, 55.16)
+					(2022-04-07, 55.17)
 				};\addlegendentry{Analisi dei requisiti}
 
 			\addplot coordinates {
 					(2022-03-23, 40.8)
 					(2022-03-27, 41.8)
+					(2022-04-07, 42.58)
 				};\addlegendentry{Piano di progetto}
 
 			\addplot coordinates {
 					(2022-03-23, 50.00)
 					(2022-03-27, 51.76)
-
+					(2022-04-07, 56.17)
 				};\addlegendentry{Piano di qualifica}
 
 		\end{axis}
@@ -276,7 +280,7 @@ Ogni punto indica la copertura percentuale degli statement nella data indicata.
 \captionof{figure}{Copertura degli statement nel tempo}
 
 \subsubsection{Copertura branch}
-La metrica si basa sullo branch coverage.
+La metrica si basa sul branch coverage.
 
 \subparagraph{Prodotti coinvolti:}
 \begin{center}
@@ -344,6 +348,7 @@ Ogni punto indica la copertura percentuale delle branch nella data indicata.
 					(2022-03-02, 0)
 					(2022-03-22, 75.1)
 					(2022-03-27, 95.1)
+					(2022-04-07, 95.56)
 				};\addlegendentry{Contratto}
 			\addplot coordinates {
 					(2022-03-02, 0)
@@ -409,10 +414,12 @@ Ogni punto indica la variazione del consultivo rispetto al preventivo di un cicl
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, +25)
+					(2022-04-07, +14)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, -33)
+					(2022-04-07, -18)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
@@ -472,10 +479,12 @@ Ogni punto indica la variazione del consultivo rispetto al preventivo di un cicl
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, +30)
+					(2022-04-07, +18)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
 					(2022-03-30, -33)
+					(2022-04-07, -29)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
